scaling logic chnages done
